--- a/config/database.yml
+++ b/config/database.yml
@@ -15,10 +15,11 @@
 development:
   adapter: postgresql
   encoding: unicode
+  host: localhost
   database: eighth_development
   pool: 5
   username: eighth
-  password:
+  password: simple8
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -38,18 +39,13 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
+development:
   adapter: postgresql
   encoding: unicode
+  host: localhost
   database: eighth_test
   pool: 5
   username: eighth
-  password:
+  password: simple8
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  database: eighth_production
-  pool: 5
-  username: eighth
-  password:
