--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -2,7 +2,6 @@
 logo.png: logo-fe921ccd985f878d40261270496ad20b.png
 rails.png: rails-e4b51606cd77fda2615e7439907bfc92.png
 application.js: application-55cd299d6f8fe22d8853de1220f2c546.js
-application.css: application-0c6a93995cf9cb657f3e1b87943dd36d.css
 blueprint/plugins/buttons/icons/cross.png: blueprint/plugins/buttons/icons/cross-1f87fac86c438386527b5e7d5ceecb0e.png
 blueprint/plugins/buttons/icons/key.png: blueprint/plugins/buttons/icons/key-5f38d0204e83d3d83585a62ff993342b.png
 blueprint/plugins/buttons/icons/tick.png: blueprint/plugins/buttons/icons/tick-09de3f730b3b6ef960450a506b0916a9.png
@@ -20,3 +19,4 @@ blueprint/plugins/link-icons/icons/xls.png: blueprint/plugins/link-icons/icons/x
 blueprint/plugins/link-icons/readme.txt: blueprint/plugins/link-icons/readme-c05f7b4f893137768f58ec83f0e738b9.txt
 blueprint/plugins/rtl/readme.txt: blueprint/plugins/rtl/readme-31ae4365e62f271c051768772ef80983.txt
 blueprint/src/grid.png: blueprint/src/grid-a3e8e6a6df57000ec00b24e8ec862608.png
+old/application.css: old/application-1c9609bc58b1e77c196de29021583379.css
