Heroku solution 125?  found 'blueprint screen css' solition on StackOverflow, edited config/env/prod.rb, moved stylesheets back to proper locations, re-run rake

--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -2,6 +2,7 @@
 logo.png: logo-fe921ccd985f878d40261270496ad20b.png
 rails.png: rails-e4b51606cd77fda2615e7439907bfc92.png
 application.js: application-55cd299d6f8fe22d8853de1220f2c546.js
+blueprint/ie.css: blueprint/ie-e74efa906a10b340155784d2bad8c799.css
 blueprint/plugins/buttons/icons/cross.png: blueprint/plugins/buttons/icons/cross-1f87fac86c438386527b5e7d5ceecb0e.png
 blueprint/plugins/buttons/icons/key.png: blueprint/plugins/buttons/icons/key-5f38d0204e83d3d83585a62ff993342b.png
 blueprint/plugins/buttons/icons/tick.png: blueprint/plugins/buttons/icons/tick-09de3f730b3b6ef960450a506b0916a9.png
@@ -18,6 +19,10 @@ blueprint/plugins/link-icons/icons/visited.png: blueprint/plugins/link-icons/ico
 blueprint/plugins/link-icons/icons/xls.png: blueprint/plugins/link-icons/icons/xls-4f6ec43c6cfd67d759ccc123fd44e1c6.png
 blueprint/plugins/link-icons/readme.txt: blueprint/plugins/link-icons/readme-c05f7b4f893137768f58ec83f0e738b9.txt
 blueprint/plugins/rtl/readme.txt: blueprint/plugins/rtl/readme-31ae4365e62f271c051768772ef80983.txt
+blueprint/print.css: blueprint/print-e8a3c1d15481d968b45744b9dfdbb0af.css
+blueprint/screen.css: blueprint/screen-56cf1e77dd0ddf0a1400ac0681b4729c.css
 blueprint/src/grid.png: blueprint/src/grid-a3e8e6a6df57000ec00b24e8ec862608.png
+custom.css: custom-1be40a90885899f419079a7e76d552dd.css
 old/application.css: old/application-1c9609bc58b1e77c196de29021583379.css
+scaffold.css: scaffold-d77418a724be73d412e68c4f1cb3784d.css
 scaffold.css.orig: scaffold.css-1b2b1673aac43e15dc08315360fe839f.orig
